--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
@@ -32,36 +32,38 @@
       </address>
     </header>
     <!-- main -->
-    <main>
-      <section class="first-section">
+    <main class="main">
+      <!-- hero section -->
+      <section class="hero-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="btn" type="button">Order Service</button>
       </section>
-      <section class="second-section">
-        <h2>Our Features</h2>
-        <ul>
-          <li>
+      <!-- second section -->
+      <section class="section">
+        <h2 class="section-title">Our Features</h2>
+        <ul class="menu-list">
+          <li class="menu-item">
             <h3 class="title">Strategy</h3>
             <p class="text">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
-          <li>
+          <li class="menu-item">
             <h3 class="title">Punctuality</h3>
             <p class="text">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
-          <li>
+          <li class="menu-item">
             <h3 class="title">Diligence</h3>
             <p class="text">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="menu-item">
             <h3 class="title">Technologies</h3>
             <p class="text">
               Design practice focused on digital experiences. We bring forth a deep passion for
@@ -70,37 +72,41 @@
           </li>
         </ul>
       </section>
+      <!-- third section -->
       <section>
         <h2 class="section-title">What are we doing</h2>
-        <ul>
-          <li>
+        <ul class="menu-list">
+          <li class="menu-item">
             <img src="./images/pc.jpg" alt="personal computer" width="360" height="300" />
           </li>
-          <li><img src="./images/phone.jpg" alt="phone" width="360" height="300" /></li>
-          <li>
+          <li class="menu-item">
+            <img src="./images/phone.jpg" alt="phone" width="360" height="300" />
+          </li>
+          <li class="menu-item">
             <img src="./images/video.jpg" alt="watching video" width="360" height="300" />
           </li>
         </ul>
       </section>
-      <section>
+      <!-- fourth section -->
+      <section class="section fourth-section-color">
         <h2 class="section-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="menu-item">
             <img src="./images1/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260" />
             <h3 class="title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
-          <li>
+          <li class="menu-item">
             <img src="./images1/tom_ford.jpg" alt="tom_ford" width="264" height="260" />
             <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="menu-item">
             <img src="./images1/camila_garcia.jpg" alt="camila_garcia" width="264" height="260" />
             <h3 class="title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="menu-item">
             <img src="./images1/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260" />
             <h3 class="title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
