--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
-        <a class="link" href="/">WebStudio</a>
+        <a class="link" href="./index.html"
+          ><span class="head-logo-web">Web</span><span class="head-logo-studio">Studio</span></a
+        >
         <ul class="menu list">
           <li menu-item><a class="link" href="./index.html">Studio</a></li>
           <li menu-item><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -116,7 +118,9 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-      <a class="link" href="./index.html">WebStudio</a>
+      <a class="link" href="./index.html"
+        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+      >
       <p class="text color-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
