--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           ><span class="head-logo-web">Web</span><span class="head-logo-studio">Studio</span></a
         >
         <ul class="menu list">
-          <li menu-item><a class="link" href="./index.html">Studio</a></li>
-          <li menu-item><a class="link" href="./portfolio.html">Portfolio</a></li>
-          <li menu-item><a class="link" href="">Contacts</a></li>
+          <li class="menu-item"><a class="link" href="./index.html">Studio</a></li>
+          <li class="menu-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li class="menu-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="adr">
