--- a/portfolio.html
+++ b/portfolio.html
@@ -13,21 +13,22 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body class="body">
     <!-- header -->
-    <header>
-      <nav>
-        <a href="/">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="main-header">
+      <nav class="navigation">
+        <span class="head-logo-web">Web</span><span class="head-logo-studio">Studio</span></a
+        >
+        <ul class="menu list">
+          <li class="menu-item"><a class="link" href="./index.html">Studio</a></li>
+          <li class="menu-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
+          <li class="menu-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="adr">
+        <ul class="menu list">
+          <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -101,9 +102,11 @@
       </section>
     </main>
     <!-- footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="link" href="./index.html"
+        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+      >
+      <p class="text color-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
