--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+  <body class="body-page">
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
@@ -26,7 +26,7 @@
           <li class="menu-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="adr">
+      <address class="address-list">
         <ul class="menu list">
           <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -34,14 +34,14 @@
       </address>
     </header>
     <!-- main -->
-    <main class="main">
+    <main class="main-page">
       <!-- hero section -->
       <section class="hero-section">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="btn" type="button">Order Service</button>
       </section>
       <!-- second section -->
-      <section class="section">
+      <section class="second-section">
         <h2 class="section-title">Our Features</h2>
         <ul class="menu-list">
           <li class="menu-item">
@@ -75,7 +75,7 @@
         </ul>
       </section>
       <!-- third section -->
-      <section>
+      <section class="third-section">
         <h2 class="section-title">What are we doing</h2>
         <ul class="menu-list">
           <li class="menu-item">
@@ -90,7 +90,7 @@
         </ul>
       </section>
       <!-- fourth section -->
-      <section class="section fourth-section-color">
+      <section class="fourth-section fourth-section-color">
         <h2 class="section-title">Our Team</h2>
         <ul>
           <li class="menu-item">
@@ -117,7 +117,7 @@
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
+    <footer class="footer-page">
       <a class="link" href="./index.html"
         ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
       >
