--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body">
+  <body class="body-page">
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
@@ -25,7 +25,7 @@
           <li class="menu-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="adr">
+      <address class="address-list">
         <ul class="menu list">
           <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
@@ -33,76 +33,76 @@
       </address>
     </header>
     <!-- main -->
-    <main>
-      <section>
+    <main class="main-page">
+      <section class="first-section">
         <h1 hidden>Main Page</h1>
-        <ul>
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+        <ul class="menu-list">
+          <li class="menu-item"><button class="btn" type="button">All</button></li>
+          <li class="menu-item"><button class="btn" type="button">Web Site</button></li>
+          <li class="menu-item"><button class="btn" type="button">App</button></li>
+          <li class="menu-item"><button class="btn" type="button">Design</button></li>
+          <li class="menu-item"><button class="btn" type="button">Marketing</button></li>
         </ul>
-        <ul>
-          <li>
+        <ul class="menu-list">
+          <li class="menu-item">
             <img
-              src="./image-portfolio/banking_app_interface_conceptimg_img.jpg"
-              alt="banking app"
+              src="./images-portfolio/banking_app_interface_conceptimg_img.jpg"
+              alt="banking app" width: 360px;
             />
-            <h2>Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="section-title">Banking App Interface Concept</h2>
+            <p class="text">App</p>
           </li>
-          <li>
-            <h2>Cashless Payment</h2>
-            <p>
+          <li class="menu-item">
+            <h2 class="section-title">Cashless Payment</h2>
+            <p class="text">
               14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
               App · Exotic Fruit Ecommerce App · Cloud Storage App
             </p>
-            <p>Marketing</p>
+            <p class="text">Marketing</p>
           </li>
-          <li>
-            <img src="./image-portfolio/meditaion_app_img.jpg" alt="meditation app" />
-            <h2>Meditaion App</h2>
-            <p>App</p>
+          <li class="menu-item">
+            <img src="./images-portfolio/meditaion_app_img.jpg" alt="meditation app" width: 360px;/>
+            <h2 class="section-title">Meditaion App</h2>
+            <p class="text">App</p>
           </li>
-          <li>
-            <img src="./image-portfolio/taxi_service_img.jpg" alt="taxi service" />
-            <h2>Taxi Service</h2>
-            <p>Marketing</p>
+          <li class="menu-item">
+            <img src="./images-portfolio/taxi_service_img.jpg" alt="taxi service" width: 360px; />
+            <h2 class="section-title">Taxi Service</h2>
+            <p class="text">Marketing</p>
           </li>
-          <li>
-            <img src="./image-portfolio/screen_illustrations_img.jpg" alt="screen illustrations" />
-            <h2>Screen Illustrations</h2>
-            <p>Design</p>
+          <li class="menu-item">
+            <img src="./images-portfolio/screen_illustrations_img.jpg" alt="screen illustrations" width: 360px; />
+            <h2 class="section-title">Screen Illustrations</h2>
+            <p class="text">Design</p>
           </li>
-          <li>
-            <img src="./image-portfolio/online_courses_img.jpg" alt="online courses" />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+          <li class="menu-item">
+            <img src="./images-portfolio/online_courses_img.jpg" alt="online courses" width: 360px; />
+            <h2 class="section-title">Online Courses</h2>
+            <p class="text">Marketing</p>
           </li>
-          <li>
+          <li class="menu-item">
             <img
-              src="./image-portfolio/instagram_stories_concept_img.jpg"
-              alt="instagram stories"
+              src="./images-portfolio/instagram_stories_concept_img.jpg"
+              alt="instagram stories" width: 360px;
             />
-            <h2>Instagram Stories Concept</h2>
-            <p>Design</p>
+            <h2 class="section-title">Instagram Stories Concept</h2>
+            <p class="text">Design</p>
           </li>
-          <li>
-            <img src="./image-portfolio/organic_food_img.jpg" alt="organic food" />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+          <li class="menu-item">
+            <img src="./images-portfolio/organic_food_img.jpg" alt="organic food" width: 360px; />
+            <h2 class="section-title">Organic Food</h2>
+            <p class="text">Web Site</p>
           </li>
-          <li>
-            <img src="./image-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+          <li class="menu-item">
+            <img src="./images-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" width: 360px; />
+            <h2 class="section-title">Fresh Coffee</h2>
+            <p class="text">Web Site</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer">
+    <footer class="footer-page">
       <a class="link" href="./index.html"
         ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
       >
