--- a/portfolio.html
+++ b/portfolio.html
@@ -17,8 +17,7 @@
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
-        <span class="head-logo-web">Web</span><span class="head-logo-studio">Studio</span></a
-        >
+        <a><span class="head-logo-web">Web</span><span class="head-logo-studio">Studio</span></a>
         <ul class="menu list">
           <li class="menu-item"><a class="link" href="./index.html">Studio</a></li>
           <li class="menu-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -47,7 +46,8 @@
           <li class="menu-item">
             <img
               src="./images-portfolio/banking_app_interface_conceptimg_img.jpg"
-              alt="banking app" width: 360px;
+              alt="banking app"
+              width="360"
             />
             <h2 class="section-title">Banking App Interface Concept</h2>
             <p class="text">App</p>
@@ -61,40 +61,45 @@
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/meditaion_app_img.jpg" alt="meditation app" width: 360px;/>
+            <img src="./images-portfolio/meditaion_app_img.jpg" alt="meditation app" width="360" />
             <h2 class="section-title">Meditaion App</h2>
             <p class="text">App</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/taxi_service_img.jpg" alt="taxi service" width: 360px; />
+            <img src="./images-portfolio/taxi_service_img.jpg" alt="taxi service" width="360" />
             <h2 class="section-title">Taxi Service</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/screen_illustrations_img.jpg" alt="screen illustrations" width: 360px; />
+            <img
+              src="./images-portfolio/screen_illustrations_img.jpg"
+              alt="screen illustrations"
+              width="360"
+            />
             <h2 class="section-title">Screen Illustrations</h2>
             <p class="text">Design</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/online_courses_img.jpg" alt="online courses" width: 360px; />
+            <img src="./images-portfolio/online_courses_img.jpg" alt="online courses" width="360" />
             <h2 class="section-title">Online Courses</h2>
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
             <img
               src="./images-portfolio/instagram_stories_concept_img.jpg"
-              alt="instagram stories" width: 360px;
+              alt="instagram stories"
+              width="360"
             />
             <h2 class="section-title">Instagram Stories Concept</h2>
             <p class="text">Design</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/organic_food_img.jpg" alt="organic food" width: 360px; />
+            <img src="./images-portfolio/organic_food_img.jpg" alt="organic food" width="360" />
             <h2 class="section-title">Organic Food</h2>
             <p class="text">Web Site</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" width: 360px; />
+            <img src="./images-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" width="360" />
             <h2 class="section-title">Fresh Coffee</h2>
             <p class="text">Web Site</p>
           </li>
