fix me homework

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body-page">
+  <body>
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
@@ -42,7 +42,7 @@
       </section>
       <!-- second section -->
       <section class="second-section">
-        <h2 class="section-title">Our Features</h2>
+        <h2 class="secren-name">Our Features</h2>
         <ul class="menu-list">
           <li class="menu-item">
             <h3 class="title">Strategy</h3>
