--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -44,63 +44,64 @@
         </ul>
         <ul class="menu-list">
           <li class="menu-item">
+            <h2 class="section-title">Banking App Interface Concept</h2>
             <img
               src="./images-portfolio/banking_app_interface_conceptimg_img.jpg"
               alt="banking app"
               width="360"
             />
-            <h2 class="section-title">Banking App Interface Concept</h2>
+            <p class="text">App</p>
+          </li>
+          <li class="menu-item">
+            <h2 class="section-title">Meditaion App</h2>
+            <img src="./images-portfolio/meditaion_app_img.jpg" alt="meditation app" width="360" />
             <p class="text">App</p>
           </li>
           <li class="menu-item">
             <h2 class="section-title">Cashless Payment</h2>
-            <p class="text">
-              14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
-              App · Exotic Fruit Ecommerce App · Cloud Storage App
-            </p>
+            <img
+              src="./images-portfolio/cashless_payment_img.jpg"
+              alt="cashless payment"
+              width="360"
+            />
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/meditaion_app_img.jpg" alt="meditation app" width="360" />
-            <h2 class="section-title">Meditaion App</h2>
-            <p class="text">App</p>
-          </li>
-          <li class="menu-item">
-            <img src="./images-portfolio/taxi_service_img.jpg" alt="taxi service" width="360" />
             <h2 class="section-title">Taxi Service</h2>
+            <img src="./images-portfolio/taxi_service_img.jpg" alt="taxi service" width="360" />
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
+            <h2 class="section-title">Screen Illustrations</h2>
             <img
               src="./images-portfolio/screen_illustrations_img.jpg"
               alt="screen illustrations"
               width="360"
             />
-            <h2 class="section-title">Screen Illustrations</h2>
             <p class="text">Design</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/online_courses_img.jpg" alt="online courses" width="360" />
             <h2 class="section-title">Online Courses</h2>
+            <img src="./images-portfolio/online_courses_img.jpg" alt="online courses" width="360" />
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
+            <h2 class="section-title">Instagram Stories Concept</h2>
             <img
               src="./images-portfolio/instagram_stories_concept_img.jpg"
               alt="instagram stories"
               width="360"
             />
-            <h2 class="section-title">Instagram Stories Concept</h2>
             <p class="text">Design</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/organic_food_img.jpg" alt="organic food" width="360" />
             <h2 class="section-title">Organic Food</h2>
+            <img src="./images-portfolio/organic_food_img.jpg" alt="organic food" width="360" />
             <p class="text">Web Site</p>
           </li>
           <li class="menu-item">
-            <img src="./images-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" width="360" />
             <h2 class="section-title">Fresh Coffee</h2>
+            <img src="./images-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" width="360" />
             <p class="text">Web Site</p>
           </li>
         </ul>
