--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <header class="main-header">
       <nav class="navigation">
         <a class="link" href="./index.html"
-          ><span class="head-logo-web">Web</span><span class="head-logo-studio">Studio</span></a
+          ><span class="head-logo-web head-logo">Web</span
+          ><span class="head-logo-studio head-logo">Studio</span></a
         >
         <ul class="menu list">
           <li class="menu-item"><a class="link" href="./index.html">Studio</a></li>
@@ -119,7 +120,8 @@
     <!-- footer -->
     <footer class="footer-page">
       <a class="link" href="./index.html"
-        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+        ><span class="logo-web logo-footer">Web</span
+        ><span class="logo-studio logo-footer">Studio</span></a
       >
       <p class="text color-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
