--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,10 @@
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
-        <a><span class="head-logo-web">Web</span><span class="head-logo-studio">Studio</span></a>
+        <a
+          ><span class="head-logo-web head-logo">Web</span
+          ><span class="head-logo-studio head-logo">Studio</span></a
+        >
         <ul class="menu list">
           <li class="menu-item"><a class="link" href="./index.html">Studio</a></li>
           <li class="menu-item"><a class="link" href="./portfolio.html">Portfolio</a></li>
@@ -110,7 +113,8 @@
     <!-- footer -->
     <footer class="footer-page">
       <a class="link" href="./index.html"
-        ><span class="logo-web">Web</span><span class="logo-studio">Studio</span></a
+        ><span class="logo-web logo-footer">Web</span
+        ><span class="logo-studio logo-footer">Studio</span></a
       >
       <p class="text color-text">
         Increase the flow of customers and sales for your business with digital marketing & growth
