--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </section>
       <!-- second section -->
       <section class="second-section">
-        <h2 class="secren-name">Our Features</h2>
+        <h2 class="secret-name">Our Features</h2>
         <ul class="menu-list">
           <li class="menu-item">
             <h3 class="title">Strategy</h3>
