--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body class="body-page">
+  <body>
     <!-- header -->
     <header class="main-header">
       <nav class="navigation">
@@ -47,7 +47,7 @@
         </ul>
         <ul class="menu-list">
           <li class="menu-item">
-            <h2 class="section-title">Banking App Interface Concept</h2>
+            <h2 class="subtitle">Banking App Interface Concept</h2>
             <img
               src="./images-portfolio/banking_app_interface_conceptimg_img.jpg"
               alt="banking app"
@@ -56,12 +56,12 @@
             <p class="text">App</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Meditaion App</h2>
+            <h2 class="subtitle">Meditaion App</h2>
             <img src="./images-portfolio/meditaion_app_img.jpg" alt="meditation app" width="360" />
             <p class="text">App</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Cashless Payment</h2>
+            <h2 class="subtitle">Cashless Payment</h2>
             <img
               src="./images-portfolio/cashless_payment_img.jpg"
               alt="cashless payment"
@@ -70,12 +70,12 @@
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Taxi Service</h2>
+            <h2 class="subtitle">Taxi Service</h2>
             <img src="./images-portfolio/taxi_service_img.jpg" alt="taxi service" width="360" />
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Screen Illustrations</h2>
+            <h2 class="subtitle">Screen Illustrations</h2>
             <img
               src="./images-portfolio/screen_illustrations_img.jpg"
               alt="screen illustrations"
@@ -84,12 +84,12 @@
             <p class="text">Design</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Online Courses</h2>
+            <h2 class="subtitle">Online Courses</h2>
             <img src="./images-portfolio/online_courses_img.jpg" alt="online courses" width="360" />
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Instagram Stories Concept</h2>
+            <h2 class="subtitle">Instagram Stories Concept</h2>
             <img
               src="./images-portfolio/instagram_stories_concept_img.jpg"
               alt="instagram stories"
@@ -98,12 +98,12 @@
             <p class="text">Design</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Organic Food</h2>
+            <h2 class="subtitle">Organic Food</h2>
             <img src="./images-portfolio/organic_food_img.jpg" alt="organic food" width="360" />
             <p class="text">Web Site</p>
           </li>
           <li class="menu-item">
-            <h2 class="section-title">Fresh Coffee</h2>
+            <h2 class="subtitle">Fresh Coffee</h2>
             <img src="./images-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" width="360" />
             <p class="text">Web Site</p>
           </li>
