--- a/index.html
+++ b/index.html
@@ -80,13 +80,23 @@
         <h2 class="section-title">What are we doing</h2>
         <ul class="menu-list">
           <li class="menu-item">
-            <img src="./images/pc.jpg" alt="personal computer" width="360" height="300" />
+            <img
+              src="./images/images-web-studio/pc.jpg"
+              alt="personal computer"
+              width="360"
+              height="300"
+            />
           </li>
           <li class="menu-item">
-            <img src="./images/phone.jpg" alt="phone" width="360" height="300" />
+            <img src="./images/images-web-studio/phone.jpg" alt="phone" width="360" height="300" />
           </li>
           <li class="menu-item">
-            <img src="./images/video.jpg" alt="watching video" width="360" height="300" />
+            <img
+              src="./images/images-web-studio/video.jpg"
+              alt="watching video"
+              width="360"
+              height="300"
+            />
           </li>
         </ul>
       </section>
@@ -95,22 +105,42 @@
         <h2 class="section-title">Our Team</h2>
         <ul>
           <li class="menu-item">
-            <img src="./images1/mark_guerrero.jpg" alt="mark_guerrero" width="264" height="260" />
+            <img
+              src="./images/images-web-studio/mark_guerrero.jpg"
+              alt="mark_guerrero"
+              width="264"
+              height="260"
+            />
             <h3 class="title">Mark Guerrero</h3>
             <p class="text">Product Designer</p>
           </li>
           <li class="menu-item">
-            <img src="./images1/tom_ford.jpg" alt="tom_ford" width="264" height="260" />
+            <img
+              src="./images/images-web-studio/tom_ford.jpg"
+              alt="tom_ford"
+              width="264"
+              height="260"
+            />
             <h3 class="title">Tom Ford</h3>
             <p class="text">Frontend Developer</p>
           </li>
           <li class="menu-item">
-            <img src="./images1/camila_garcia.jpg" alt="camila_garcia" width="264" height="260" />
+            <img
+              src="./images/images-web-studio/camila_garcia.jpg"
+              alt="camila_garcia"
+              width="264"
+              height="260"
+            />
             <h3 class="title">Camila Garcia</h3>
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
-            <img src="./images1/daniel_wilson.jpg" alt="daniel_wilson" width="264" height="260" />
+            <img
+              src="./images/images-web-studio/daniel_wilson.jpg"
+              alt="daniel_wilson"
+              width="264"
+              height="260"
+            />
             <h3 class="title">Daniel Wilson</h3>
             <p class="text">UI Designer</p>
           </li>
