--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
           <li class="menu-item">
             <h2 class="subtitle">Banking App Interface Concept</h2>
             <img
-              src="./images-portfolio/banking_app_interface_conceptimg_img.jpg"
+              src="./images/images-portfolio/banking_app_interface_conceptimg_img.jpg"
               alt="banking app"
               width="360"
             />
@@ -57,13 +57,17 @@
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Meditaion App</h2>
-            <img src="./images-portfolio/meditaion_app_img.jpg" alt="meditation app" width="360" />
+            <img
+              src="./images/images-portfolio/meditaion_app_img.jpg"
+              alt="meditation app"
+              width="360"
+            />
             <p class="text">App</p>
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Cashless Payment</h2>
             <img
-              src="./images-portfolio/cashless_payment_img.jpg"
+              src="./images/images-portfolio/cashless_payment_img.jpg"
               alt="cashless payment"
               width="360"
             />
@@ -71,13 +75,17 @@
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Taxi Service</h2>
-            <img src="./images-portfolio/taxi_service_img.jpg" alt="taxi service" width="360" />
+            <img
+              src="./images/images-portfolio/taxi_service_img.jpg"
+              alt="taxi service"
+              width="360"
+            />
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Screen Illustrations</h2>
             <img
-              src="./images-portfolio/screen_illustrations_img.jpg"
+              src="./images/images-portfolio/screen_illustrations_img.jpg"
               alt="screen illustrations"
               width="360"
             />
@@ -85,13 +93,17 @@
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Online Courses</h2>
-            <img src="./images-portfolio/online_courses_img.jpg" alt="online courses" width="360" />
+            <img
+              src="./images/images-portfolio/online_courses_img.jpg"
+              alt="online courses"
+              width="360"
+            />
             <p class="text">Marketing</p>
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Instagram Stories Concept</h2>
             <img
-              src="./images-portfolio/instagram_stories_concept_img.jpg"
+              src="./images/images-portfolio/instagram_stories_concept_img.jpg"
               alt="instagram stories"
               width="360"
             />
@@ -99,12 +111,20 @@
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Organic Food</h2>
-            <img src="./images-portfolio/organic_food_img.jpg" alt="organic food" width="360" />
+            <img
+              src="./images/images-portfolio/organic_food_img.jpg"
+              alt="organic food"
+              width="360"
+            />
             <p class="text">Web Site</p>
           </li>
           <li class="menu-item">
             <h2 class="subtitle">Fresh Coffee</h2>
-            <img src="./images-portfolio/fresh_coffee_img.jpg" alt="fresh coffee" width="360" />
+            <img
+              src="./images/images-portfolio/fresh_coffee_img.jpg"
+              alt="fresh coffee"
+              width="360"
+            />
             <p class="text">Web Site</p>
           </li>
         </ul>
