--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="menu-item"><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="address-list">
+      <address class="adress-list">
         <ul class="menu list">
           <li><a class="contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a class="contact" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
